moved AddActivity underneath registartionComponents and refactored code to get alignment correct; add to cart not working, add activity is working

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,22 @@
   /* display: flex; */
 }
 
+.registration-titles {
+  display: flex;
+}
+
+.registration-titles h4 {
+  flex: 1;
+}
+
+.activities {
+  display: flex;
+}
+
+.activities * {
+  flex: 1;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
